security: sanitize internal hostname references
Replace all references to internal NAS hostname (jabba.lan) with generic
portainer-server.local placeholder.

Changes:
- README.md: Replace jabba.lan with portainer-server.local throughout
- docs/ROADMAP.md: Replace Jabba NAS references with generic server names
- docs/backlog.csv: Update all Jabba references in user stories
- scripts/*.ps1: Update script comments with generic hostname
- scripts/*.sh: Update script comments with generic hostname
- tests/: Update mock fixtures and test expectations

All occurrences sanitized (40+ references)
No internal infrastructure details remain exposed

This completes the sanitization process - repository is now fully
generic and safe for public consumption.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ on:
         default: false
 
 env:
-  PORTAINER_URL: https://jabba.lan:9444
+  PORTAINER_URL: https://portainer-server.local:9444
 
 jobs:
   pre-deploy-validation:
