Fix lint root resolution and Syft artifact upload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,6 +168,7 @@ jobs:
           path: ./
           format: 'cyclonedx-json'
           output-file: 'sbom.json'
+          upload-artifact: false
 
       - name: Upload SBOM as artifact
         uses: actions/upload-artifact@v4
